--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.476.0",
+    "mongoose": "^8.10.2",
     "next": "15.1.7",
     "qs": "^6.14.0",
     "react": "^19.0.0",
